default/objects/Transactions_Report__c/Transactions_Report__c.object-meta.xml
<CustomObject>
    <label>Transactions Report</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Transactions Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>