default/objects/Transactions_Report__c/fields/Average__c.field-meta.xml
<CustomField>
    <fullName>Average__c</fullName>
    <label>Average</label>
    <length>10</length>
    <type>Text</type>
</CustomField>