default/objects/Transactions_Report__c/fields/Median__c.field-meta.xml
<CustomField>
    <fullName>Median__c</fullName>
    <label>Median</label>
    <length>10</length>
    <type>Text</type>
</CustomField>