default/objects/Transactions_Report__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Transactions Reports</relationshipLabel>
    <relationshipName>Transactions_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>