default/objects/Transactions_Report__c/fields/Period_Days__c.field-meta.xml
<CustomField>
    <fullName>Period_Days__c</fullName>
    <label>Period Days</label>
    <length>10</length>
    <type>Text</type>
</CustomField>