default/objects/Transactions_Report__c/fields/Period_End_At__c.field-meta.xml
<CustomField>
    <fullName>Period_End_At__c</fullName>
    <label>Period End At</label>
    <length>20</length>
    <type>Text</type>
</CustomField>