default/objects/Transactions_Report__c/fields/Period_Start_At__c.field-meta.xml
<CustomField>
    <fullName>Period_Start_At__c</fullName>
    <label>Period Start At</label>
    <length>20</length>
    <type>Text</type>
</CustomField>