default/objects/Transactions_Report__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <length>10</length>
    <type>Text</type>
</CustomField>